fix: spacing title and date mobile

--- a/src/css/specs.css
+++ b/src/css/specs.css
@@ -123,7 +123,6 @@ img {
   }
 
   p#last-modified {
-    margin-top: -0.8rem;
     font-size: 1.2rem;
   }
 }
